--- a/css/flexstyles.css
+++ b/css/flexstyles.css
@@ -67,3 +67,36 @@ button:hover{
 .flex-shrink .three{
     flex-shrink:0;
 }
+
+
+.flex-attempt{
+    display: flex;
+    flex-direction: row;
+}
+
+.flex-attempt div{
+    border: 2px solid red;
+    background-color: aliceblue;
+}
+
+
+.flex-attempt > .flex-item{
+    flex: auto;
+}
+
+.flex-attempt > .raw-item{
+    width: 5rem;
+}
+
+
+.flexcolumn{
+    display: flex;
+    flex-direction: column;
+}
+
+.flexcolumn div{
+    border: 4px solid navy;
+    background-color: skyblue;
+    height: 80px;
+    flex: 1 1 auto;
+}
